--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" type="text/css" href="app.css">
   </head>
   <body>
-    <script src='bundle.js'></script>
+    <script src="./apps.js"></script>
   </body>
 </html>
